# ooplr2

./: CMakeLists.txt
include/: money.h
lib/: money.cpp
tests/: money_tests.cpp
